<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_2sdp"
    android:layout_marginBottom="@dimen/_2sdp"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_7sdp">

        <ImageView
            android:id="@+id/img"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@mipmap/placeholder"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textDirection="locale"
        android:layoutDirection="locale"
        android:orientation="vertical"
        android:padding="@dimen/_7sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textDirection="locale"
                android:layoutDirection="locale"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCourseName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvInstructor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/discount"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textDirection="locale"
                android:layoutDirection="locale"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvOldPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDiscountPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="$0"
                    />
            </LinearLayout>

            <ImageView
                android:id="@+id/imgDelete"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_delete"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/buyWith"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="@dimen/_9ssp"
                android:layout_height="wrap_content"
                android:text="@string/buy"
                android:background="@drawable/round_rect_dialog_bg"
                android:textColor="@color/font1"
                />
            <LinearLayout
                android:id="@+id/llPromo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/round_rect"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/tvPromoCode"
                    android:layout_width="0dp"
                    android:background="@null"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/_9ssp"
                    android:gravity="center_vertical"
                    android:hint="@string/promo_code"
                    android:padding="5dp"
                    android:textCursorDrawable="@drawable/custom_cursor"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvApply"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/_10ssp"
                    android:text="@string/apply"
                    android:textColor="@color/white"
                    android:padding="5dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/round_rect_right"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
