<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="locale"
    android:textDirection="locale"
    android:layout_margin="@dimen/_10sdp"
    card_view:cardCornerRadius="5dp">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layoutDirection="locale"
    android:textDirection="locale"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/learn"
        android:scaleType="fitXY"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        android:text="Microsof Excel- Excel from Begginner to advanced"
        />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play_button"
            android:layout_gravity="center_vertical"
            android:paddingEnd="@dimen/_10sdp"
            />


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/_10sdp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layoutDirection="locale"
            android:textDirection="locale"
            android:orientation="vertical"
            android:gravity="start"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress"
                android:gravity="start"
                android:layoutDirection="locale"
                android:textSize="@dimen/_11ssp"
                android:textDirection="locale"
                android:textColor="@color/black"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress"
                android:gravity="start"
                android:layoutDirection="locale"
                android:textSize="@dimen/_9ssp"
                android:textDirection="locale"
                android:textColor="@color/font1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layoutDirection="locale"
            android:textDirection="locale"
            android:gravity="end"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:textSize="@dimen/_11ssp"
                android:gravity="end"
                android:layoutDirection="locale"
                android:textDirection="locale"
                android:textColor="@color/black"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="18/02/2020"
                android:textSize="@dimen/_9ssp"
                android:textDirection="locale"
                android:textColor="@color/font1"
                />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:paddingTop="@dimen/_7sdp"
        android:paddingBottom="@dimen/_7sdp"
        android:text="@string/start"
        android:paddingStart="1dp"
        android:paddingEnd="1dp"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        />
</LinearLayout>

</androidx.cardview.widget.CardView>